--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.1.1",
+    "@tanstack/react-query": "^5.51.11",
     "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
